# lancghain-ask

./: .gitignore  AGENTIC_DESIGN_SPEC.md  DESIGN_SPEC.md  RAG_DESIGN_SPEC.md  README.md  app.py  pyproject.toml
notebooks/: rag_eval.ipynb  rag_pipeline.ipynb  rag_query.ipynb
