[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.7",
    "langgraph>=0.2.0",
    "langchain-anthropic>=1.4.5",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.0",
    "openai>=2.41.1",
    "pinecone>=9.1.0",
    "pinecone-text>=0.11.0",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "streamlit>=1.58.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-languages>=1.10.2",
]
